--- a/links.html
+++ b/links.html
@@ -54,6 +54,10 @@
                 <a href="https://jobinja.ir/user/YU-8721537" target="_blank">رزومه</a>
             </div>
 
+            <div class="social-card">
+                <img src="./img/124397891.png" alt="MCENLogo" width="70%" height="120%">
+            </div>
+
         </div>
     </div>
     <div>
